# Buddha-Brot-Renderer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: blue.rs  buddha.rs  bulb_gen.rs  camera.rs  cell.rs  complet_sampled_cells.rs  config.toml  covarage_grid.rs  covarage_grid_gen.rs  draw_manager.rs  grid.rs  grid_bound.rs  grid_reducer.rs  histogram.rs  iterat_point.rs  iterative_bound_gen.rs  main.rs  mandel_brot_render.rs  mandel_iter.rs  pixels.rs  polygon.rs  polygon_reducer.rs  range.rs  range_encoder.rs  rect.rs  sample_checker.rs  sample_gen.rs  sample_mutator.rs  sampled_cell.rs  save_cell.rs  triangulation.rs  u_rect.rs  util.rs  worker.rs
src/covarage_grid/: cell.rs  covarage_grid.rs  covarage_grid_gen.rs  grid.rs  mod.rs  range.rs  range_encoder.rs  sample_cells.rs  sampled_cell.rs  worker.rs
