cargo-features = ["edition2021"]
[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voronoice = "0.1.0"
macroquad = "0.3.10"
rand = "0.8.4"
num = "0.4.0"
glam = "0.20.0"

[profile.dev]
opt-level = 3
debug = 2

[profile.bench]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3