[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.10"
rand = "0.8.4"
glam = "0.20.0"
rayon = "1.5.1"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[profile.dev]
opt-level = 3
debug = 2

[profile.release]
debug = 2

[profile.test]
opt-level = 0
debug = 2

[profile.bench]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3