[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22.0"
rayon = "1.6.1"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
minifb = "0.23.0"
# image = "0.24.5"
num-complex = "0.4.3"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
debug = 2

[profile.test]
opt-level = 0
debug = 2

[profile.bench]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3